--- a/app/assets/scss/4-pages/_cospro.scss
+++ b/app/assets/scss/4-pages/_cospro.scss
@@ -19,6 +19,65 @@
 }
 
 .cospro-page {
+  section {
+    &.bg-gray {
+      background: $gray-color-9;
+      padding: 70px 0;
+      @media #{$sp} {
+        padding: 35px 0;
+      }
+    }
+
+    .ttl-secondary {
+      font-size: 16px;
+      color: $primary-color;
+      margin-bottom: 40px;
+      text-align: center;
+
+      @media #{$sp} {
+        margin-bottom: 15px;
+      }
+    }
+
+    .ttl-primary {
+      font-size: 32px;
+      margin-bottom: 40px;
+      text-align: center;
+      font-weight: bold;
+
+      @media #{$sp} {
+        font-size: 20px;
+        line-height: 1.75;
+        margin-bottom: 20px;
+      }
+    }
+
+    .ttl-tertiary {
+      font-size: 20px;
+      text-align: center;
+      font-weight: normal;
+
+      &.bold {
+        font-weight: bold;
+      }
+
+      @media #{$sp} {
+        font-size: 14px;
+        margin-bottom: 20px;
+      }
+
+      a {
+        color: $primary-color;
+        text-decoration: underline;
+        text-underline-offset: 4px;
+      }
+      @media #{$sp} {
+        font-size: 16px;
+        text-align: left;
+      }
+    }
+  }
+
   .section-welcome {
     padding-top: 70px;
     padding-bottom: 40px;
@@ -169,6 +228,9 @@
 
     &__desc {
       margin-bottom: 123px;
+      @media #{$sp} {
+        margin-bottom: 30px;
+      }
       .ttl-quaternary {
         text-align: left;
         font-size: 24px;
@@ -177,8 +239,8 @@
         font-weight: 500;
         @media #{$sp} {
           text-align: center;
-
-          font-size: 20px;
+          font-size: 16px;
+          line-height: 1.75;
         }
       }
     }
@@ -860,211 +922,31 @@
     }
   }
 
-  .section-question-and-answer {
-    text-align: center;
-    background-color: #f5f5f5;
-
-    .ttl-sub {
-      font-size: 14px;
-      font-weight: bold;
-      font-family: "Futura";
-      color: $primary-color;
+  .section-contact {
+    .blue_gradient_btn {
+      &:first-child {
+        padding: 12px 20px;
+      }
     }
-
-    .link-item {
-      text-decoration: underline;
-      color: #0297b5;
+    .ttl-notice {
+      @media #{$sp} {
+        font-size: 16px;
+      }
     }
-
-    @media #{$sp} {
-      padding: 35px 15px;
-    }
-
-    .ttl-secondary {
-      font-size: 32px;
-      margin-bottom: 50px;
-    }
-
     .ttl-tertiary {
-      margin-bottom: 50px;
-      font-weight: normal;
-    }
-
-    .question-tab,
-    .answer-tab {
-      justify-content: space-between;
-      align-items: center;
-      position: relative;
-      padding: 4px 30px;
-      width: 100%;
-      margin-bottom: 30px;
+      font-size: 32px;
+      font-weight: bold;
 
       @media #{$sp} {
-        padding: 4px 8px;
-      }
-
-      .ttl-secondary {
-        font-size: 30px;
-        margin-bottom: 0;
-      }
-
-      .qa-content {
-        flex: 1;
-
-        .ttl-tertiary {
-          text-align: left;
-          font-size: 20px;
-          margin-bottom: 0;
-          font-weight: 400;
-
-          @media #{$sp} {
-            font-size: 16px;
-          }
-        }
-      }
-
-      .qa-button {
-        svg {
-          margin-top: 5px;
-        }
-        .svg__minus {
-          display: none;
-        }
-        &.open {
-          .svg__plus {
-            display: none;
-          }
-          .svg__minus {
-            display: block;
-          }
-        }
-      }
-    }
-
-    .question-tab {
-      cursor: pointer;
-      background: $blue-color-2 0% 0% no-repeat padding-box;
-      box-shadow: 0px 3px 20px #00000029;
-
-      .qa-marker {
-        color: $primary-color;
-      }
-
-      .qa-content {
-        .ttl-tertiary {
-          font-weight: bold;
-        }
-      }
-    }
-
-    .question-tab.open {
-      svg {
-        display: none;
-      }
-    }
-
-    .answer-tab {
-      background-color: #f5f5f5;
-      margin-top: -30px;
-      padding: 0 60px 0 30px;
-      display: none;
-
-      @media #{$sp} {
-        padding: 8px;
-      }
-
-      .qa-marker {
-        color: $green-color-1;
+        font-size: 20px;
+        line-height: 1.75;
+        text-align: center;
       }
     }
   }
+
 
   .ttl-primary {
     font-size: 32px;
-  }
-
-  .section-contact {
-    .card-type22 {
-      .ttl-tertiary {
-        @media #{$sp} {
-          font-size: 20px;
-        }
-      }
-    }
-
-    .card__box {
-      padding: 40px !important;
-      .ttl-head {
-        color: #000000;
-        text-align: center;
-        margin-bottom: 30px;
-        font-weight: bold;
-        font-size: 20px;
-        @media #{$sp} {
-          font-size: 14px;
-        }
-      }
-      .card__info {
-        display: grid;
-        grid-template-columns: 1fr 1.2fr;
-        color: #000000;
-        gap: 30px;
-
-        @media #{$sp} {
-          grid-template-columns: 1fr;
-        }
-
-        .card__info-content {
-        }
-        .card__info-image {
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          img {
-            max-width: 100%;
-            width: 100%;
-          }
-        }
-      }
-      .col-right {
-        grid-template-columns: 1fr 1.2fr;
-
-        @media #{$sp} {
-          grid-template-columns: 1fr;
-        }
-
-        .card__info-image {
-          img {
-            height: 111px;
-
-            @media #{$sp} {
-              height: auto;
-            }
-          }
-        }
-      }
-      .btn-container {
-        padding: 0 30px;
-        a {
-          font-size: 18px;
-        }
-
-        @media #{$sp} {
-          padding: 0 10px;
-          a {
-            font-size: 13px;
-          }
-        }
-
-        .blue_gradient_btn {
-          margin-top: 35px;
-
-          @media #{$sp} {
-            max-width: 100%;
-          }
-        }
-      }
-    }
   }
 }
