--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -185,22 +185,25 @@
             <dd>
               福利厚生の種類を増やして充実させるほど、運営の手間はかかります。「セゾンフクリコ」なら、施設などとの直接契約業務や、設備投資・運営はすべて完全アウトソーシングなので導入事業者の方に業務のご負担はありません。
             </dd>
-            <div class="flex gap30 card-container">
+            <div class="flex card-container">
 
               <div class="card-button">
-                <a href="#" class="default_btn">社内規定の作成</a>
-                <a href="#" class="default_btn">申請書の作成や処理</a>
-                <a href="#" class="default_btn">従業員からの質問・対応</a>
-                <a href="#" class="default_btn">利用後の処理</a>
+                <li class="default_btn">社内規定の作成</li>
+                <li class="default_btn">申請書の作成や処理</li>
+                <li class="default_btn">従業員からの質問・対応</li>
+                <li class="default_btn">利用後の処理</li>
               </div>
 
-              <div class="img-circle">
-                <img src="/assets/img/common/img-welfare-preview.png" alt="">
-              </div>
+              <div class="right-content">
+                <div class="img-circle">
+                  <img src="/assets/img/common/img-welfare-preview.png" alt="">
+                </div>
 
-              <div class="arrow"></div>
-              <div class="welfare-more-tooltip">
-                <h3 class="welfare-more-tooltip__content">完全アウトソーシング型の福利厚生サービスなので、</br>新たな業務が増える心配はありません。</br>運用は全てお任せください。</h3>
+                <div class="arrow"></div>
+                <div class="welfare-more-tooltip">
+                  <h3 class="welfare-more-tooltip__content">
+                    完全アウトソーシング型の福利厚生サービスなので、</br>新たな業務が増える心配はありません。</br>運用は全てお任せください。</h3>
+                </div>
               </div>
             </div>
           </div>
@@ -259,7 +262,8 @@
                     <img src="/assets/img/welfare/welfare_card1.png" alt="preferential service 1" />
                     <div class="preferential-service-description">
                       <p class="description">
-                        <strong>レジャーや健康増進、食事や旅行のシーンで利用できる優待</strong>など、従業員の方々が利用しやすい多彩な優待を取りそろえています。</p>
+                        <strong>レジャーや健康増進、食事や旅行のシーンで利用できる優待</strong>など、従業員の方々が利用しやすい多彩な優待を取りそろえています。
+                      </p>
                     </div>
                   </div>
                 </li>
@@ -302,10 +306,11 @@
 
   <section id="application" class="section-contact2 fadein">
     <div class="card-type22">
-      <h3 class="ttl-tertiary"><span><strong>従業員の満足度</strong>を高めて<strong>人材が定着する会社</strong>に</span>
+      <h3 class="ttl-tertiary">
+        <span><strong>従業員の満足度</strong>を高めて<strong>人材が定着する会社</strong>に</span>
         <div class="tooltip">
           <div class="tooltip-container">
-            <h4 class="tooltip__content">{{"法定外福利厚生サービスをご検討中の \n 事業者の方へ" | safe}}</h4>
+            <h4 class="tooltip__content">法定外福利厚生サービスをご検討中の事業者の方へ</h4>
           </div>
         </div>
       </h3>
@@ -325,7 +330,7 @@
             <div href="#" class="card">
               <summary class="card__box">
                 <div class="card__box--ttl">「詳しい話を聞きたい」「相談したい」</br>という方はこちら</div>
-                <div><a class="blue_gradient_btn" href="/contact">サポート担当に無料で相談する</a></div>
+                <div><a href="/contact" class="blue_gradient_btn">サポート担当に無料で相談する</a></div>
               </summary>
             </div>
           </div>
