--- a/app/assets/scss/4-pages/_welfare.scss
+++ b/app/assets/scss/4-pages/_welfare.scss
@@ -1,11 +1,9 @@
 .welfare-page {
-  margin: auto;
-  padding: 140px 0 0px;
-
   .section-welcome {
     position: relative;
     min-height: 518px;
-    padding: 120px;
+    padding-top: 70px;
+    padding-bottom: 40px;
     text-align: left;
     background-color: #f7f7f7;
     background-image: url("/assets/img/common/welfare_visual.png");
@@ -14,6 +12,9 @@
 
     @media #{$sp} {
       padding: 35px;
+      background-image: unset;
+      background-color: #7fc0db;
+      min-height: unset;
     }
 
     .ttl-primary {
@@ -23,6 +24,10 @@
       line-height: 1;
       color: #ffffff;
       text-shadow: 2px 1px 12px rgba(0, 0, 0, 0.5);
+      @media #{$sp} {
+        font-size: 30px;
+        line-height: 1.75;
+      }
     }
 
     .bg-tertiary-title {
@@ -41,6 +46,11 @@
       color: white;
       font-weight: bold;
       margin-bottom: 0;
+
+      @media #{$sp} {
+        font-size: 16px;
+        line-height: 1.75;
+      }
     }
 
     .ttl-quaternary {
@@ -48,6 +58,11 @@
       font-size: 18px;
       font-weight: 400;
       text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+
+      @media #{$sp} {
+        font-size: 16px;
+        line-height: 1.75;
+      }
     }
 
     .dark_blue_outline_rounded_btn {
@@ -62,7 +77,7 @@
     background-color: #fff;
 
     @media #{$sp} {
-      padding: 70px 0px;
+      padding: 30px 0;
     }
 
     .ttl-secondary {
@@ -70,7 +85,9 @@
       margin-bottom: 61px;
 
       @media #{$sp} {
-        font-size: 24px;
+        font-size: 16px;
+        line-height: 1.75;
+        margin-bottom: 20px;
       }
     }
 
@@ -129,7 +146,7 @@
 
     @media #{$sp} {
       font-size: 18px;
-      padding: 120px 15px 70px;
+      padding: 70px 15px 70px;
     }
 
     .up-triangle {
@@ -147,6 +164,10 @@
     .ttl-secondary {
       font-size: 32px;
       margin-bottom: 30px;
+      @media #{$sp} {
+        font-size: 20px;
+        line-height: 1.75;
+      }
     }
 
     .section-img {
@@ -258,6 +279,7 @@
             padding: 0 30px;
             flex-wrap: nowrap;
             align-items: center;
+            gap: 40px;
 
             @media #{$sp} {
               padding: 0px;
@@ -265,7 +287,8 @@
             }
 
             .img-circle {
-              width: calc(24% - 20px);
+              max-width: 210px;
+              max-height: 210px;
               border-radius: 50%;
               background-color: #ccc;
               display: flex;
@@ -275,12 +298,13 @@
               flex-shrink: 0;
 
               @media #{$sp} {
-                width: calc(100% - 20px);
+                width: 35%;
               }
             }
 
             .card-button {
-              width: calc(22% - 20px);
+              width: 22%;
+              max-width: 230px;
 
               @media #{$sp} {
                 width: calc(100% - 20px);
@@ -299,18 +323,30 @@
               }
             }
 
+            .right-content {
+              width: calc(78% - 40px);
+              display: flex;
+              align-items: center;
+              gap: 20px;
+
+              @media #{$sp} {
+                width: 100%;
+                gap: 10px;
+              }
+            }
+
             .welfare-more-tooltip {
               position: relative;
-              width: calc(50% - 10px);
               font-weight: 500;
               flex-shrink: 0;
               text-align: left;
-              padding: 20px;
+              padding: 20px 20px 20px 30px;
               background-color: #ffffff;
               box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
 
               @media #{$sp} {
-                width: calc(100% - 20px);
+                width: calc(65% - 18px);
+                padding: 10px 10px 10px 23px;
               }
 
               .welfare-more-tooltip__content {
@@ -319,6 +355,9 @@
                 font-weight: bold;
                 background-color: #fff;
                 border-radius: 3px;
+                @media #{$sp} {
+                  font-size: 16px;
+                }
               }
               &::before {
                 left: -4px;
@@ -623,6 +662,11 @@
     .ttl-secondary {
       font-size: 32px;
       margin-bottom: 30px;
+
+      @media #{$sp} {
+        font-size: 20px;
+        line-height: 1.75;
+      }
     }
 
     .ttl-tertiary {
@@ -651,18 +695,35 @@
     }
   }
 
+  .section-contact2 {
+    .card-type22 .description {
+      @media #{$sp} {
+        font-size: 16px;
+        line-height: 1.75;
+      }
+    }
+
+    .useful-wp .containers .card .card__box .card__box--ttl {
+      @media #{$sp} {
+        font-size: 16px;
+        line-height: 1.5;
+      }
+    }
+  }
+
   .section-contact2 .tooltip {
     left: calc(50% - 241px);
 
     @media #{$sp} {
-      top: -110px;
-      left: calc(50% - 183px);
+      top: -64px;
+      left: calc(50% - 159px);
     }
   }
 
   .section-contact2 .tooltip .tooltip__content {
     @media #{$sp} {
       white-space: pre;
+      font-size: 12px;
     }
   }
 }
