--- a/app/pages/improve_cash_flow/index.njk
+++ b/app/pages/improve_cash_flow/index.njk
@@ -214,7 +214,10 @@
                 </li>
               </ul>
 
-              <a href="/business_support_loan/" class="bondi_blue_outline_btn">セゾンビジネスサポートローンをもっと詳しく</a>
+              <a href="/business_support_loan/" class="bondi_blue_outline_btn">
+                <span class="pc-only">セゾンビジネスサポートローンをもっと詳しく</span>
+                <span class="sp-only">セゾンビジネスサポートローンを<br />もっと詳しく</span>
+              </a>
             </div>
           </div>
         </div>
