--- a/app/assets/scss/4-pages/_business.scss
+++ b/app/assets/scss/4-pages/_business.scss
@@ -71,6 +71,9 @@
       .ttl-primary {
         margin-bottom: 0;
         text-shadow: 0 0 20px rgba(5,23,44,0.55);
+        @media #{$sp} {
+          font-size: 30px;
+        }
       }
     }
   }
@@ -253,12 +256,25 @@
     .ttl-secondary {
       font-size: 32px;
       margin-bottom: 40px;
+      @media #{$sp} {
+        font-size: 20px;
+        line-height: 1.75;
+        margin-bottom: 25px;
+      }
     }
 
     .ttl-tertiary {
       font-size: 20px;
       font-weight: 400;
       margin-bottom: 50px;
+      @media #{$sp} {
+        font-size: 16px;
+        line-height: 1.75;
+      }
+    }
+
+    @media #{$sp} {
+      padding: 35px 15px;
     }
   }
 
@@ -281,6 +297,10 @@
     .ttl-secondary {
       font-size: 32px;
       margin-bottom: 61px;
+      @media #{$sp} {
+        font-size: 20px;
+        margin-bottom: 35px;
+      }
     }
   }
   // ===========END SECTIONS==========
