fix ui all page 2009

--- a/app/pages/concur_expense/index.njk
+++ b/app/pages/concur_expense/index.njk
@@ -65,7 +65,7 @@ link: "#material"
 <main class="concur_expense-page">
   <section id="top" class="section-welcome fadein">
     <div class="section-welcome__banner">
-      <img src="/assets/img/concur_expense/banner_concur_expense.png" />
+      <img class="pc-only" src="/assets/img/concur_expense/banner_concur_expense.png" />
     </div>
 
     <div class="section-welcome-info">
@@ -83,7 +83,7 @@ link: "#material"
         </div>
         <div class="section-welcome__act">
           <a href="#" class="act-more black_more">
-            <div class="act-more-tooltip">
+            <div class="act-more-tooltip pc-only">
               <h4 class="act-more-tooltip__content">Concur Expenseが3分でわかる!</h4>
             </div>
             資料ダウンロード
