--- a/app/assets/scss/1-tools/_vars.scss
+++ b/app/assets/scss/1-tools/_vars.scss
@@ -39,8 +39,8 @@ $gradient-bg-reverse: transparent
   linear-gradient(241deg, #0497b5 0%, #53d2b2 100%) 0% 0% no-repeat padding-box;
 $gradient-bg-2: transparent linear-gradient(90deg, #111111 0%, #444444 100%) 0%
   0% no-repeat padding-box;
-$gradient-bg-reverse-2: transparent linear-gradient(270deg, #111111 0%, #444444 100%) 0%
-  0% no-repeat padding-box;
+$gradient-bg-reverse-2: transparent
+  linear-gradient(270deg, #111111 0%, #444444 100%) 0% 0% no-repeat padding-box;
 
 $blue-color: #0497b5;
 $blue-color-1: #00758c;
@@ -67,6 +67,9 @@ $gray-color-9: #f5f5f5;
 
 $yellow-color: #ffff01;
 $yellow-color-1: #edf8e5;
+
+$orange-color: #f0ab00;
+
 
 // テキストカラー
 
