--- a/app/assets/scss/4-pages/_business_pro.scss
+++ b/app/assets/scss/4-pages/_business_pro.scss
@@ -37,6 +37,9 @@
 
     &.cobalt {
       background-image: url("/assets/img/cobalt_business/banner.png");
+      @media #{$sp} {
+        background-position: 35%;
+      }
       .banner-containers .banner-left .card-description {
         font-size: 32px;
       }
@@ -44,13 +47,23 @@
 
     &.purchasing_card {
       background-image: url("/assets/img/purchasing_card/purchasing_card_banner.png");
+      @media #{$sp} {
+        background-position: 47%;
+      }
       .banner-containers .banner-left .ttl-primary {
         font-size: 39px;
+        @media #{$sp} {
+          font-size: 30px;
+          line-height: 1.75;
+        }
       }
     }
 
     &.gold {
       background-image: url("/assets/img/gold_business_pro/gold_business_pro_banner.png");
+      @media #{$sp} {
+        background-position: 35%;
+      }
     }
 
     .containers {
@@ -91,6 +104,9 @@
             line-height: 28px;
             transform: skew(10deg);
             font-size: 21px;
+            @media #{$sp} {
+              font-size: 16px;
+            }
             .yellow-txt {
               color: $yellow-color;
             }
@@ -103,6 +119,8 @@
           text-shadow: 0pt 0pt 20pt #05172c8d;
 
           @media #{$sp} {
+            font-size: 30px;
+            line-height: 1.75;
             text-align: center;
           }
         }
@@ -139,6 +157,17 @@
                 #ffffff00 100%
               )
               0% 0% no-repeat padding-box;
+            @media #{$sp} {
+              background: transparent
+                linear-gradient(
+                  90deg,
+                  #ffffff00 0%,
+                  #ffffff 20%,
+                  #ffffff 82%,
+                  #ffffff00 100%
+                )
+                0% 0% no-repeat padding-box;
+            }
           }
 
           @media #{$sp} {
@@ -220,6 +249,9 @@
 
           .bondi_blue_outline_btn {
             background-color: $white-color;
+            @media #{$sp} {
+              font-size: 14px;
+            }
 
             &:hover {
               background-color: $primary-color;
@@ -239,7 +271,7 @@
 
     @media #{$sp} {
       .ttl-primary {
-        font-size: 28px !important;
+        font-size: 30px;
       }
       .card-img {
         width: 180px !important;
@@ -253,7 +285,8 @@
       font-weight: bold;
       line-height: 51px;
       @media #{$sp} {
-        font-size: 22px;
+        font-size: 20px;
+        line-height: 1.75;
       }
     }
 
@@ -272,6 +305,12 @@
       .card-item {
         display: grid;
         gap: 20.5px;
+        .card-description {
+          @media #{$sp} {
+            font-size: 16px;
+            line-height: 1.75;
+          }
+        }
       }
 
       .card {
@@ -371,6 +410,8 @@
 
       @media #{$sp} {
         margin-bottom: 30px;
+        font-size: 20px;
+        line-height: 1.75;
       }
     }
 
@@ -402,7 +443,7 @@
     }
     @media #{$sp} {
       .ttl-secondary {
-        font-size: 22px;
+        font-size: 20px;
       }
       .card-list {
         grid-template-columns: 1fr;
@@ -419,6 +460,10 @@
       font-size: 32px;
       font-weight: bold;
       line-height: 51px;
+      @media #{$sp} {
+        font-size: 20px;
+        line-height: 1.75;
+      }
     }
 
     .ttl-tertiary {
@@ -445,7 +490,8 @@
       font-weight: bold;
       line-height: 70px;
       @media #{$sp} {
-        font-size: 22px;
+        font-size: 20px;
+        line-height: 1.75;
       }
     }
 
@@ -491,6 +537,7 @@
 
         @media #{$sp} {
           padding: 15px;
+          height: auto;
         }
 
         .ttl-quaternary {
@@ -624,7 +671,8 @@
       line-height: 70px;
 
       @media #{$sp} {
-        font-size: 22px;
+        font-size: 20px;
+        line-height: 1.75;
       }
     }
 
@@ -697,11 +745,19 @@
       font-weight: bold;
       line-height: 70px;
       margin-bottom: 20px;
+      @media #{$sp} {
+        font-size: 20px;
+        line-height: 1.75;
+      }
     }
 
     .ttl-quaternary {
       font-size: 20px;
       font-weight: normal;
+      @media #{$sp} {
+        font-size: 16px;
+        line-height: 1.75;
+      }
     }
     .grid-card-containers {
       display: grid;
@@ -743,9 +799,10 @@
     max-width: 1200px;
     background: $white-color;
 
-    .ttl-secondary{
+    .ttl-secondary {
       @media #{$sp} {
-        font-size: 22px;
+        font-size: 20px;
+        line-height: 1.75;
       }
     }
 
@@ -756,6 +813,11 @@
         width: 400px;
         max-width: unset;
         padding: 18px;
+        &.bondi_blue_outline_btn {
+          @media #{$sp} {
+            font-size: 14px;
+          }
+        }
 
         @media #{$sp} {
           width: 100%;
@@ -782,7 +844,8 @@
       font-size: 32px;
       line-height: 70px;
       @media #{$sp} {
-        font-size: 22px;
+        font-size: 20px;
+        line-height: 1.75;
       }
     }
 
@@ -857,6 +920,9 @@
           }
           .bondi_blue_outline_btn__tittle {
             margin: 0px;
+            @media #{$sp} {
+              font-size: 14px;
+            }
           }
         }
         ul {
@@ -883,6 +949,10 @@
       text-align: center;
       font-size: 20px;
       font-weight: bold;
+      @media #{$sp} {
+        font-size: 16px;
+        line-height: 1.75;
+      }
 
       .btn-contact {
         width: 33.7%;
@@ -911,7 +981,8 @@
 
       @media #{$sp} {
         margin-bottom: 20px;
-        font-size: 22px;
+        font-size: 20px;
+        line-height: 1.75;
       }
     }
     .grid-card-containers {
