--- a/app/assets/scss/4-pages/_concur_expense.scss
+++ b/app/assets/scss/4-pages/_concur_expense.scss
@@ -18,7 +18,8 @@
         font-size: 15px;
       }
       @media #{$sp} {
-        font-size: 22px;
+        font-size: 20px;
+        line-height: 1.75;
         text-align: center !important;
         margin-bottom: 20px;
       }
@@ -32,6 +33,7 @@
       @media #{$sp} {
         font-size: 16px;
         margin-bottom: 32px;
+        text-align: left;
       }
     }
 
@@ -102,7 +104,7 @@
       height: 100%;
       border-radius: inherit;
       overflow: hidden;
-      background: $primary-color;
+      background: $orange-color;
 
       img {
         position: static;
@@ -194,6 +196,10 @@
           font-weight: 700;
           display: grid;
           gap: 20px;
+          @media #{$sp} {
+            font-size: 14px;
+            gap: 10px;
+          }
 
           .info-item {
             padding: 10px 20px;
@@ -218,6 +224,8 @@
         text-align: left;
 
         @media #{$sp} {
+          font-size: 30px;
+          line-height: 1.75;
           text-align: center;
         }
       }
@@ -225,6 +233,9 @@
 
     &__desc {
       margin-bottom: 123px;
+      @media #{$sp} {
+        margin-bottom: 35px;
+      }
       .ttl-quaternary {
         text-align: left;
         font-size: 24px;
@@ -232,8 +243,8 @@
         text-shadow: 0px 0px 20px #05172c8d;
         @media #{$sp} {
           text-align: center;
-
-          font-size: 20px;
+          font-size: 16px;
+          line-height: 1.75;
         }
       }
     }
@@ -515,10 +526,9 @@
       margin-bottom: 60px;
     }
     @media #{$sp} {
-      padding: 35px 0;
+      padding: 0 0 35px;
       .ttl-primary {
-        font-size: 22px;
-        margin-bottom: 50px;
+        margin-bottom: 40px;
       }
     }
 
@@ -843,7 +853,7 @@
                   text-align: left;
                 }
                 @media #{$sp} {
-                  padding: 15px;
+                  padding: 20px 20px 38px;
                 }
               }
               &.section-2 {
@@ -853,6 +863,9 @@
                 }
                 .accountant-section-content {
                   padding: 30px 35px 28px 57px;
+                  @media #{$sp} {
+                    padding: 20px 20px 38px;
+                  }
                   svg {
                     circle {
                       fill: $green-color-2;
@@ -874,6 +887,9 @@
                 }
                 .accountant-section-content {
                   padding: 30px 35px 28px;
+                  @media #{$sp} {
+                    padding: 20px 20px 38px;
+                  }
                   svg {
                     circle {
                       fill: $green-color-1;
@@ -967,7 +983,7 @@
                 font-size: 16px;
                 font-weight: 700;
                 line-height: 25px;
-                padding: 18px 12px 18px 16px; 
+                padding: 18px 12px 18px 16px;
                 border: 1px solid $orange-color;
                 border-radius: 3px;
                 box-shadow: none;
@@ -1307,6 +1323,22 @@
     }
   }
 
+  .section-question-and-answer {
+    .ttl-tertiary {
+      @media #{$sp} {
+        text-align: left;
+        font-weight: 400;
+      }
+    }
+    .bondi_blue_outline_btn {
+      .bondi_blue_outline_btn__tittle {
+        @media #{$sp} {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+
   //============ COMMON SECTION ===========
   .section-more {
     margin-top: 115px;
@@ -1322,7 +1354,7 @@
       &.blue_gradient_btn {
         max-width: 500px;
         @media #{$sp} {
-          font-size: 16px;
+          font-size: 14px;
           max-width: 90%;
         }
       }
